tests/errors/test_13.x
// while conditional is not boolean

fn main() -> i64 {

    while 1 {
    }

}